<resources>
    <string name="app_name">JobManagement</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="empty_string" />
    <string name="please_enter_password">Enter password</string>
    <string name="job_adverts">Job Adverts</string>
    <string name="email_address">Email address</string>
    <string name="email">Email</string>
    <string name="enter_password">Enter password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="apply_image">Apply image</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="first_name">First Name</string>
    <string name="cellphone_number">Cellphone Number</string>
    <string name="select_education_level">Select education level</string>
    <string name="field_of_study">Field Of Study</string>
    <string name="select_field_of_study">Select field of study</string>
    <string name="warning_type">Warning Type</string>
    <string name="list_image">list image</string>
    <string name="apply">apply</string>
    <string name="info">info</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="now_hiring">now hiring</string>
    <string name="job_advert">Job Advert</string>
    <string name="appointment_type">Appointment Type</string>
    <string name="select_job_position">Select job position</string>
    <string name="select_job_location">Select job location</string>
    <string name="job_location">Job Location</string>
    <string name="job_position">Job Position</string>
    <string name="enter_advertising_company">Enter Advertising Company</string>
    <string name="company">company</string>
    <string name="enter_job_description">Enter Job Description</string>
    <string name="minimum_qualification">Minimum Qualification</string>
    <string name="money">money</string>
    <string name="enter_monthly_gross_salary">Enter Monthly Gross Salary</string>
    <string name="license_required">License Required?</string>
    <string name="save">Save</string>
    <string name="select_minimum_qualification">Select Minimum Qualification</string>
    <string name="please_enter_name">Enter name</string>
    <string name="please_enter_last_name">Enter last name</string>
    <string name="please_enter_identity_number">Enter Identity Number</string>
    <string name="please_enter_phone_number">Enter phone number</string>
    <string name="enter_all_fields">Enter all fields!</string>
    <string name="register_profile">Register Profile</string>
    <string name="password_too_simple">Password too simple!</string>
    <string name="incorrect_email_format">Email is not correctly formatted!</string>
    <string name="confirmation_unmatched">Password and confirm password do not match!</string>
    <string name="incorrect_phone_format">\" is not a correctly formatted phone number!\"</string>
    <string name="invalid_id">\" is not a valid SA ID!\"</string>
    <string name="enter_job_title">Enter job title</string>
    <string name="select_appointment_type">Select appointment type</string>
    <string name="enter_minimum_qualification">Enter minimum qualification</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="favorite">favorite</string>
    <string name="insert_job_advert">Insert Job Advert</string>
    <string name="check">check</string>
    <string name="job_title">Job Title</string>
    <string name="advertising_company">Advertising Company</string>
    <string name="job_description">Job Description</string>
    <string name="monthly_gross_salary">Monthly Gross Salary</string>
    <string name="successfully_added">\" successfully added!\"</string>
    <string name="job_advert_already_exist">Job Advert already exist</string>
    <string name="data">data</string>
    <string name="my_preference">my Preference</string>
    <string name="user_email">userEmail</string>
    <string name="user_password">userPassword</string>
    <string name="hi">\"Hi \"</string>
    <string name="profile_created">, Your profile has been created</string>
    <string name="error">\"Error: \"</string>
    <string name="request_code">requestCode</string>
    <string name="index">index</string>
    <string name="successfully_deleted">\" successfully deleted!\"</string>
    <string name="job_advert_applied_to">Job Advert successfully applied to</string>
    <string name="enter_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="identity_number">Identity Number</string>
    <string name="education_level">Education Level</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_JobAvert_ActionBar">Update Job Advert</string>
    <string name="update_Title">Update</string>
    <string name="job_advert_id">JobAdvertId</string>
</resources>