<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        style="@style/basic_layout">

        <LinearLayout
            style="@style/basic_layout"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView"
                style="@style/list_activity_image"
                android:contentDescription="@string/now_hiring"
                app:srcCompat="@drawable/ic_hiring_now" />

            <TextView
                android:id="@+id/tvJobTitle"
                style="@style/row_header"
                android:text="@string/empty_string" />
        </LinearLayout>

        <LinearLayout
            style="@style/list_act_horizontal_layout">

            <TextView
                android:id="@+id/tvJobLocation"
                style="@style/list_activity_text"
                android:drawableStart="@drawable/dark_location"
                android:text="@string/empty_string" />

            <TextView
                android:id="@+id/tvAdCompany"
                style="@style/list_activity_text"
                android:drawableStart="@drawable/dark_company"
                android:text="@string/empty_string" />
        </LinearLayout>

        <LinearLayout
            style="@style/list_act_horizontal_layout">

            <TextView
                android:id="@+id/tvMinQualification"
                style="@style/list_activity_text"
                android:drawableStart="@drawable/dark_qualification"
                android:text="@string/empty_string" />

            <TextView
                android:id="@+id/tvSalary"
                style="@style/list_activity_text"
                android:drawableStart="@drawable/money"
                android:text="@string/empty_string" />
        </LinearLayout>

        <LinearLayout
            style="@style/list_act_horizontal_layout">

            <ImageView
                android:id="@+id/ivApply"
                style="@style/list_activity_icons"
                android:contentDescription="@string/favorite"
                app:srcCompat="@drawable/favorite_border" />

            <ImageView
                android:id="@+id/ivInfo"
                style="@style/list_activity_icons"
                android:contentDescription="@string/info"
                app:srcCompat="@drawable/baseline_info" />

            <ImageView
                android:id="@+id/ivUpdate"
                style="@style/list_activity_icons"
                android:contentDescription="@string/edit"
                app:srcCompat="@drawable/edit" />

            <ImageView
                android:id="@+id/ivDelete"
                style="@style/list_activity_icons"
                android:contentDescription="@string/delete"
                app:srcCompat="@drawable/delete" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>